# occ

./: COGNITIVE_SYNERGY_ANALYSIS_2025.md  COGNITIVE_SYNERGY_IMPROVEMENTS.md  COGNITIVE_SYNERGY_ROADMAP.md  Cargo.toml  ENHANCEMENTS.md  ENHANCEMENTS_2025.md  ENHANCEMENT_SUMMARY.md  GUIX_BUILD_ANALYSIS.md  IMPLEMENTATION_2025_OCT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENT_ANALYSIS.md  MANUS_COGNITIVE_SYNERGY_ANALYSIS.md  NEXT_GENERATION_COGNITIVE_SYNERGY.md  WORKFLOW_IMPROVEMENTS.md  WORKFLOW_TEST_ANALYSIS.md  WORKFLOW_UPDATE_NOTE.md  WORKFLOW_UPDATE_NOTE_2025.md  WORKFLOW_UPDATE_NOTE_OCT2025.md  advanced_cognitive_synergy_demo.py  app_enhanced.py  attention_allocation.py  autonomous_mcp_agent.py  cognitive_discovery.py  cognitive_llm_integration.py  cognitive_metrics_collector.py  cognitive_monitoring.py  cognitive_orchestrator.py  cognitive_registry.json  cognitive_synergy_bridge.py  cognitive_synergy_framework.py  cognitive_synergy_metrics.py  cognitive_synergy_orchestrator.py  cognitive_synergy_results.json  deep_tree_echo_membranes.py  enhanced_cognitive_synergy_demo.py  guix-fixed.scm  guix.scm  hypergraph_dynamics.py  hypergraph_knowledge_bridge.py  (+12 more)
cogutil/: CMakeLists.txt
database/: README.md  hypergraph_persistence.py  hypergraph_schema.sql
docs/: COGNITIVE_SYNERGY_ENHANCEMENTS.md  cognitive-architecture.md
mcp/: atomspace_mcp_server.py  mcp_server_config.py
monitoring/: cognitive_synergy_dashboard.py
src/: cognitive_synergy.rs  lib.rs  main.rs
tests/: test_cognitive_integration.py  test_cognitive_orchestration.py  (+2 more)
(+6 files in other folders)
